load("@wfa_common_jvm//build/rules_kotlin:defs.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "measurementconsumer",
    srcs = ["MeasurementConsumerClient.kt"],
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/client/common:key_handles",
        "//src/main/kotlin/org/wfanet/measurement/consent/client/common:signing",
        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:event_group_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:requisition_spec_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:hashing",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:key_storage",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:signatures",
    ],
)
