load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "storage",
    srcs = ["Storage.kt"],
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto:signatures",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto/exception",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/storage:client",
    ],
)
