load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "hybridencryption",
    srcs = glob(["*.kt"]),
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto/keystore",
        "//src/main/proto/wfa/measurement/api/v2alpha:certificate_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
    ],
)
