load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "KingdomClientTest",
    srcs = ["KingdomClientTest.kt"],
    test_class = "org.wfanet.measurement.consent.client.kingdom.KingdomClientTest",
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/client/kingdom",
        "//src/main/kotlin/org/wfanet/measurement/consent/client/measurementconsumer",
        "//src/main/kotlin/org/wfanet/measurement/consent/testing",
        "//src/main/proto/wfa/measurement/api/v2alpha:certificate_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_kt_jvm_proto",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:signatures",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/testing",
    ],
)
