load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "MeasurementConsumerClientTest",
    srcs = ["MeasurementConsumerClientTest.kt"],
    test_class = "org.wfanet.measurement.consent.client.measurementconsumer.MeasurementConsumerClientTest",
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/client/duchy",
        "//src/main/kotlin/org/wfanet/measurement/consent/client/measurementconsumer",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto/hybridencryption",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto/hybridencryption/testing",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto/keystore",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto/testing:cryptotesting",
        "//src/main/kotlin/org/wfanet/measurement/consent/testing",
        "//src/main/proto/wfa/measurement/api/v2alpha:certificate_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/org/mockito/kotlin",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:signatures",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/testing",
    ],
)
